--- a/docker/config/nginx/nginx.conf
+++ b/docker/config/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
 
 	location / {
 		# Redirect everything that isn't a real file to index.php
-		try_files $uri $uri/ /app_dev.php$is_args$args;
+		try_files $uri $uri/ /index.php$is_args$args;
 	}
 
 	# uncomment to avoid processing of calls to non-existing static files by Yii
